--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fual-backend",
+  "name": "stm-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
@@ -15,11 +15,24 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.40.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^8.0.2",
+    "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
