--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "passport-google-oauth20": "^2.0.0",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
+    "@types/passport-google-oauth20": "^2.0.14",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
