--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "passport-google-oauth20": "^2.0.0",
+    "qrcode": "^1.5.3",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "@types/passport-google-oauth20": "^2.0.14",
+    "@types/qrcode": "^1.5.5",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
